# network_tp2

./: .gitignore  CMakeLists.txt
main/: CMakeLists.txt
main/include/: class_registry.hpp  client.hpp  ennemy.hpp  game_object.hpp  linking_context.hpp  player.hpp  quaternion.hpp  replication_manager.hpp  server.hpp  utils.hpp  vector3.hpp
main/src/: class_registry.cpp  client.cpp  ennemy.cpp  game_object.cpp  linking_context.cpp  main.cpp  player.cpp  quaternion.cpp  replication_manager.cpp  server.cpp  streams.cpp  vector3.cpp
main/test/: TestPackUnpack.cpp
